geoserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-geoserver
spec:
  selector:
    matchLabels:
      name: my-geoserver
  replicas: 1
  template:
    metadata:
      labels:
        name: my-geoserver
    spec:
      volumes:
      - name: geoserver-pv
        persistentVolumeClaim:
          claimName: geoserver-pvc
      containers:
      - name: my-geoserver
        image: stevetarter/geoserver
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: geoserver-pv
          mountPath: /opt/geoserver/data_dir
