geoserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: geoserver-ingress
spec:
  rules:
  - host: geoserver.info
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: my-geoserver
            port:
              number: 8080
